# vtune-mcp-server

./: .gitignore  README.md  RESEARCH.md  pyproject.toml  server.py
templates/: function_tree.html
tests/: compare_fixtures.py  test_server.py
vtune_mcp_server/: __init__.py  server.py
